Fix literal wrapping

--- a/src/sparql/TablePlus.scss
+++ b/src/sparql/TablePlus.scss
@@ -142,7 +142,7 @@ THE SOFTWARE.
           color: #428bca;
         }
         .nonIri {
-          white-space: pre;
+          white-space: pre-wrap;
         }
       }
     }
